tests/syntax_error/bad_enum_member.jou
enum Foo:
    123  # Error: expected a name for an enum member, got an integer
